# bep-server

./: .bazelrc  .gitignore  BUILD.bazel  Cargo.toml  LICENSE  WORKSPACE.bazel  cargo-bazel-lock.json
proto/: BUILD.bazel  build_event_stream.proto  command_line.proto  failure_details.proto  publish_build_event.proto
src/: main.rs
